@@ -1,4 +1,5 @@
 a.out
+FvwmTransFocus
 cdiff
 load
 malloc
