@@ -1,6 +1,6 @@
 
                      Tiny Applications Collection
-                     $Date: 2005/07/01 17:37:27 $
+                     $Date: 2005/07/01 18:36:44 $
 
 Tiny Applications Collection is a set of small programs, shell scripts
 and other  things which may be  usefull in everyday life  ;) There are
@@ -12,6 +12,10 @@ share it  please email me at  mn86/AT/o2.pl, I'll be glad  to add your
 utility to the collection.
 
 At the moment the collection include:
+
+ * FvwmTransFocus - an FVWM module which changes windows' opacity
+   depending on focus.  Whn window looses focus it becomes more
+   transparent which looks "cool" ;) .
 
  * cdiff (C and sed versions) - adds ANSI codes to the output of diff
    making it a bit more readable.  Both versions reads input from
