@@ -1,11 +1,21 @@
 Tiny Applications Collection TODO List
 
+* FvwmTransFocus
+  - Nicer config (using *FvwmTransFocus: *)
+  - Set initial opacity for all windows after the module is started
+  - Different config for transient, sticky, etc windows
+  - Refresh windows when background changed doesn't seem to work ;/
+  - Print errors when debug enabled
+
 * cdiff.c
   - add support for more modes
   - allow running as a wrapper
 
 * malloc
   - change way it displays progress
+
+* timer
+  - add synchronization (after some time timer may show invalid value)
 
 * tuptime
   - add support for BSD systems
